# xboxrecomp

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
docs/: GETTING_STARTED.md
src/apu/: CMakeLists.txt  apu_core.c  apu_mmio_hook.c  apu_xaudio2.c  apu_xaudio2.h
src/audio/: CMakeLists.txt  dsound_xbox.h
src/d3d/: CMakeLists.txt  d3d8_gl.c  d3d8_internal.h  d3d8_xbox.h
src/input/: CMakeLists.txt  xinput_device.c  xinput_xbox.h
src/kernel/: CMakeLists.txt  kernel.h  kernel_bridge.c  kernel_crypto.c  kernel_file.c  kernel_hal.c  kernel_path.c  kernel_thunks.c  xbox_memory_layout.h
src/nv2a/: CMakeLists.txt  nv2a_mmio_hook.c  nv2a_mmio_hook.h  nv2a_pb_replay.c  qemu_shim.h
src/platform/: CMakeLists.txt  win32_compat.c  win32_compat.h  xbox_winnt.h
templates/runtime/: recomp_types.h
tools/: README.md  sdk_validate.py
tools/disasm/: __main__.py  cache.py  disasm.py  engine.py  functions.py  loader.py
tools/ghidra_naming/: .gitignore  README.md  extract_for_ghidra.py  merge_names.py  run_ghidra.sh
tools/ghidra_naming/ghidra_scripts/: ExportXbeNames.py  SeedFunctions.py  SetAnalysisOptions.java
tools/linux/: install_deps.sh  test_install_deps.sh
tools/recomp/: __main__.py  config.py  lifter.py  test_config.py  test_lifter.py  translator.py
tools/symbols/: __init__.py  map_names.py  test_map_names.py
tools/xbe_parser/: __init__.py  __main__.py  xbe_parser.py
